@@ -4,6 +4,8 @@ Release 1.4.6 (in development)
 Bugs fixed
 ----------
 
+* applehelp: Sphinx crashes if ``hiutil`` or ``codesign`` commands not found
+
 
 Release 1.4.5 (released Jul 13, 2016)
 =====================================
